force-app/main/default/objects/Treatment__c/fields/Main_specialist__c.field-meta.xml
<CustomField>
    <fullName>Main_specialist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Main specialist</label>
    <referenceTo>Specialist__c</referenceTo>
    <relationshipLabel>Treatments</relationshipLabel>
    <relationshipName>Treatments</relationshipName>
    <type>Lookup</type>
</CustomField>