force-app/main/default/objects/Treatment__c/fields/Reason_for_consultation__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_consultation__c</fullName>
    <label>Reason for consultation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>