force-app/main/default/objects/Treatment__c/fields/Register_date__c.field-meta.xml
<CustomField>
    <fullName>Register_date__c</fullName>
    <label>Register date</label>
    <type>Date</type>
</CustomField>