force-app/main/default/objects/Treatment__c/fields/Respiratory_subtype__c.field-meta.xml
<CustomField>
    <fullName>Respiratory_subtype__c</fullName>
    <label>Respiratory subtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Chest percussion</fullName>
            </value>
            <value>
                <fullName>Diaphragm</fullName>
            </value>
            <value>
                <fullName>Sleep</fullName>
            </value>
            <value>
                <fullName>Spirometry</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>