force-app/main/default/objects/Treatment__c/recordTypes/Physiotherapy.recordType-meta.xml
<RecordType>
    <fullName>Physiotherapy</fullName>
    <active>true</active>
    <label>Physiotherapy</label>
</RecordType>