force-app/main/default/objects/Treatment__c/recordTypes/Preliminary_Regime.recordType-meta.xml
<RecordType>
    <fullName>Preliminary_Regime</fullName>
    <active>true</active>
    <label>Preliminary Regime</label>
</RecordType>