force-app/main/default/objects/Treatment__c/recordTypes/Psychology.recordType-meta.xml
<RecordType>
    <fullName>Psychology</fullName>
    <active>true</active>
    <label>Psychology</label>
</RecordType>