force-app/main/default/objects/Treatment__c/recordTypes/Respiratory_Therapy.recordType-meta.xml
<RecordType>
    <fullName>Respiratory_Therapy</fullName>
    <active>true</active>
    <label>Respiratory Therapy</label>
</RecordType>