force-app/main/default/objects/Treatment__c/recordTypes/Speech_Therapy.recordType-meta.xml
<RecordType>
    <fullName>Speech_Therapy</fullName>
    <active>true</active>
    <label>Speech Therapy</label>
</RecordType>